Bug 66781 - FILESAVE: DOCX Export shows hidden bullets after saved by LO
Summary: FILESAVE: DOCX Export shows hidden bullets after saved by LO
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Adam CloudOn
URL:
Whiteboard: BSA target:4.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-10 15:31 UTC by Adam CloudOn
Modified: 2013-07-24 13:15 UTC (History)
0 users

See Also:
Crash report or crash signature:
Regression By:


Attachments
DOCX containing hidden bullets (20.93 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-07-10 15:31 UTC, Adam CloudOn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adam CloudOn 2013-07-10 15:31:23 UTC
Created attachment 82282 [details]
DOCX containing hidden bullets

Problem description: 
When LO opens a DOCX that has 'hidden' bullets in it (bullets with level 0) - after saved by LO to a NEW.DOCX - the bullets are visible in Word.

Steps to reproduce:
1. Load the attached DOCX in LO
2. Save as a NEW.DOCX
3. Load the NEW.DOCX in Word
4. The bullets are visible

Current behavior:
In the NEW.DOCX file - Bullets are visible

Expected behavior:
In the NEW.DOCX file - Bullets should be hidden
              
Operating System: All
Version: 4.2.0.0.alpha0+ Master
Comment 1 Jorendc 2013-07-10 18:44:26 UTC
NEW right away :)
Comment 2 Commit Notification 2013-07-24 13:14:12 UTC
Adam Co committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=71e1927c78e3873c377d87feb64b33286138756b

fdo#66781 : fix bullets with level 0



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.