fdo#66781 : fix bullets with level 0

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx

Change-Id: I14b0ce9ae096eae4759793a49865eefe16ec1afd
Reviewed-on: https://gerrit.libreoffice.org/4818